bug fix: removing faq resulted in the removal of the parent service due to CASCADE_ALL in the faq instead of service only